Changes to CSS to avoid invisible font issue

--- a/squidalytics/static/scss/main.scss
+++ b/squidalytics/static/scss/main.scss
@@ -40,6 +40,7 @@ $text-light: $body-color;
     src: url('/static/fonts/Splatfont2.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
   }
 
 html, body {
